Clean up
git-svn-id: https://svn.kenai.com/svn/bsaf~main/trunk@97 39130dca-0e0f-c9f4-f3e0-9e7262a0d940